--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
   <section id="topbar" class="topbar d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
+        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">hello@hellolilly.se</a></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+4673 121 47 39</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.tiktok.com/@hellolilly.se" class="twitter"><i class="bi bi-tiktok"></i></a>
+        <a href="https://www.facebook.com/hellolilly.se" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/hellolilly.se/" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://se.linkedin.com/company/hellolilly" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
     </div>
   </section><!-- End Top Bar -->
@@ -61,34 +61,19 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Impact<span>.</span></h1>
+        <h1><i>Lilly</i><span>.</span></h1>
       </a>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="#hero">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#hero">Hem</a></li>
+          <li><a href="#about">Om Oss</a></li>
+          <li><a href="#services">Rusta och Matcha</a></li>
+          <li><a href="#portfolio">Arbetsgivare</a></li>
+          <li><a href="#team">Seminarier</a></li>
+          <li><a href="blog">Blogg</a></li>
+          <li><a href="#">Våra kontor</a></li>
+          <li><a href="#">Karriärsida</a></li>
+          <li><a href="#contact">Kontakt</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -104,11 +89,11 @@
     <div class="container position-relative">
       <div class="row gy-5" data-aos="fade-in">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
-          <h2>Welcome to <span>Impact</span></h2>
-          <p>Sed autem laudantium dolores. Voluptatem itaque ea consequatur eveniet. Eum quas beatae cumque eum quaerat.</p>
+          <h2>Välj <span><i style="color:#eec0c8;">HelloLilly</i></span> som leverantör!</h2>
+          <p>Är du inskriven på Arbetsförmedlingen och har rätt till Rusta och Matcha? Då kan du välja HelloLilly som leverantör genom att klicka nedan</p>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#about" class="btn-get-started">Get Started</a>
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            <a href="#about" class="btn-get-started">Klicka Här</a>
+            <a href="https://www.youtube.com/watch?v=9weA1zxwW-M&t=1s&ab_channel=HelloLilly" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Kolla på video</span></a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2">
@@ -123,29 +108,28 @@
 
           <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
+              <div class="icon"><i class="bi bi-person-hearts"></i></div>
+              <h4 class="title"><a href="" class="stretched-link">Rusta & Matcha</a></h4>
+            </div>
+          </div><!--End Icon Box -->
+          <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon-box">
               <div class="icon"><i class="bi bi-easel"></i></div>
-              <h4 class="title"><a href="" class="stretched-link">Lorem Ipsum</a></h4>
+              <h4 class="title"><a href="" class="stretched-link">Seminarier & Workshops</a></h4>
             </div>
           </div><!--End Icon Box -->
 
           <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-gem"></i></div>
-              <h4 class="title"><a href="" class="stretched-link">Sed ut perspiciatis</a></h4>
+              <div class="icon"><i class="bi bi-building-add"></i></div>
+              <h4 class="title"><a href="" class="stretched-link">För Arbetsgivare</a></h4>
             </div>
           </div><!--End Icon Box -->
 
           <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-geo-alt"></i></div>
-              <h4 class="title"><a href="" class="stretched-link">Magni Dolores</a></h4>
-            </div>
-          </div><!--End Icon Box -->
-
-          <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon-box">
-              <div class="icon"><i class="bi bi-command"></i></div>
-              <h4 class="title"><a href="" class="stretched-link">Nemo Enim</a></h4>
+              <h4 class="title"><a href="" class="stretched-link">Våra Kontor</a></h4>
             </div>
           </div><!--End Icon Box -->
 
