--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="row gy-5" data-aos="fade-in">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
           <h2>Välj <span><i style="color:#eec0c8;">HelloLilly</i></span> som leverantör!</h2>
-          <p>Är du inskriven på Arbetsförmedlingen och har rätt till Rusta och Matcha? Då kan du välja HelloLilly som leverantör genom att klicka nedan</p>
+          <p>Är du inskriven på Arbetsförmedlingen och har rätt till Rusta och Matcha? Då kan du välja HelloLilly som leverantör genom att klicka nedan.</p>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started">Klicka Här</a>
             <a href="https://www.youtube.com/watch?v=9weA1zxwW-M&t=1s&ab_channel=HelloLilly" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Kolla på video</span></a>
@@ -148,36 +148,37 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>About Us</h2>
-          <p>Aperiam dolorum et et wuia molestias qui eveniet numquam nihil porro incidunt dolores placeat sunt id nobis omnis tiledo stran delop</p>
+          <h2>Om <i>Lilly</i><span style="color: orange;">.</span></h2>
         </div>
 
         <div class="row gy-4">
           <div class="col-lg-6">
-            <h3>Voluptatem dignissimos provident quasi corporis</h3>
+            <h3>Förbättrad matchning mellan arbetsgivare och arbetssökande!</h3>
             <img src="assets/img/about.jpg" class="img-fluid rounded-4 mb-4" alt="">
-            <p>Ut fugiat ut sunt quia veniam. Voluptate perferendis perspiciatis quod nisi et. Placeat debitis quia recusandae odit et consequatur voluptatem. Dignissimos pariatur consectetur fugiat voluptas ea.</p>
-            <p>Temporibus nihil enim deserunt sed ea. Provident sit expedita aut cupiditate nihil vitae quo officia vel. Blanditiis eligendi possimus et in cum. Quidem eos ut sint rem veniam qui. Ut ut repellendus nobis tempore doloribus debitis explicabo similique sit. Accusantium sed ut omnis beatae neque deleniti repellendus.</p>
+            <p>Vi brinner för förbättrad matchning mellan arbetsgivare och arbetssökande, och med hjälp av våra tjänster minskar vi arbetslösheten i Sverige och säkerställer rätt person på rätt plats</p>
+            <p>Har du några frågor är du välkommen att kontakta vår kundtjänst genom att fylla i formuläret nedan, så kontaktar vi dig via telefon eller mail så snabbt vi kan!</p>
+            <p>Mvh,</p>
+            <p>HelloLilly</p>
+            <p>0731 21 47 39</p>
+            <p>info@hellolilly.se</p>
           </div>
           <div class="col-lg-6">
             <div class="content ps-0 ps-lg-5">
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+                Teamet bakom Lilly har lång erfarenhet av rekrytering, headhunting, arbetsmarknadsinsatser och digitalisering.
               </p>
               <ul>
-                <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bi bi-check-circle-fill"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                <li><i class="bi bi-check-circle-fill"></i> Via <span style="font-weight: bolder;"> våra kanaler i sociala medier </span> såsom Facebook, Instagram och TikTok ger vi tips, inspiration och interagerar med våra följare.</li>
+                <li><i class="bi bi-check-circle-fill"></i> Genom <span style="font-weight: bolder;"> våra rekryteringstjänster </span> söker vi specifika kompetenser till företag som är i behov av personal.</li>
+                <li><i class="bi bi-check-circle-fill"></i> Som <span style="font-weight: bolder;"> leverantör av matchningstjänster </span> rustar och matchar vi arbetssökande i sin resa mot jobb eller utbildning.</li>
               </ul>
               <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
+                
               </p>
 
               <div class="position-relative mt-4">
                 <img src="assets/img/about-2.jpg" class="img-fluid rounded-4" alt="">
-                <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
+                <a href="https://www.youtube.com/watch?v=9weA1zxwW-M&t=1s&ab_channel=HelloLilly" class="glightbox play-btn"></a>
               </div>
             </div>
           </div>
@@ -191,8 +192,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Testimonials</h2>
-          <p>Voluptatem quibusdam ut ullam perferendis repellat non ut consequuntur est eveniet deleniti fignissimos eos quam</p>
+          <h2>Omdömmen</h2>
+          <p style="font-weight: bolder;">4.4/5</p>
         </div>
 
         <div class="slides-3 swiper" data-aos="fade-up" data-aos-delay="100">
@@ -202,10 +203,10 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <div class="d-flex align-items-center">
-                    <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img flex-shrink-0" alt="">
+                    <!-- <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
                     <div>
-                      <h3>Saul Goodman</h3>
-                      <h4>Ceo &amp; Founder</h4>
+                      <h3>Reza R</h3>
+                      
                       <div class="stars">
                         <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                       </div>
@@ -213,7 +214,7 @@
                   </div>
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                    Det var trevligt miljö med duktiga handlingare. Det bästa var att de ringde mig och frågade om olika jobb rekommenderar i olika branscher. Jag rekommenderar den här leverantörer.
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
@@ -224,18 +225,17 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <div class="d-flex align-items-center">
-                    <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img flex-shrink-0" alt="">
+                    <!-- <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
                     <div>
-                      <h3>Sara Wilsson</h3>
-                      <h4>Designer</h4>
+                      <h3>Mimmi S</h3>
                       <div class="stars">
-                        <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                       </div>
                     </div>
                   </div>
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                    Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                    Jag visste inte om jag ville studera eller arbeta, hellolilly hjälpte mig lista ut va som var nästa steg för mig. Deras syv hjälpte mig på plats att skicka in ansökan och sånt som jag inte hade klarat själv. Alla handledare jag haft på Lilly har varit väldigt trevliga, hjälpande och förstående. Tack för hjälpen!
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
@@ -246,10 +246,9 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <div class="d-flex align-items-center">
-                    <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img flex-shrink-0" alt="">
+                    <!-- <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
                     <div>
-                      <h3>Jena Karlis</h3>
-                      <h4>Store Owner</h4>
+                      <h3>Jawed S</h3>
                       <div class="stars">
                         <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                       </div>
@@ -257,7 +256,8 @@
                   </div>
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                    Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                    Jag såg Hellolilly Annonsen på Tiktok och jag tänkte testa kanske det hjälper mig att få ett jobb men jag torde inte att jag får jobb så snabb. Jag tackar från Andreas och Marcus för hjälpen.❤️
+Mvh Jaweed
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
@@ -268,10 +268,9 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <div class="d-flex align-items-center">
-                    <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img flex-shrink-0" alt="">
+                    <!-- <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
                     <div>
-                      <h3>Matt Brandon</h3>
-                      <h4>Freelancer</h4>
+                      <h3>Mohamed J</h3>
                       <div class="stars">
                         <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                       </div>
@@ -279,7 +278,7 @@
                   </div>
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                    Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore.
+                    Jag vill tacka min handledare Louise för all hjälp och även Amun för det stöd jag fått i att hitta arbete. Jag har fått heltidsjobb som montör i Västerås.
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
@@ -290,10 +289,9 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <div class="d-flex align-items-center">
-                    <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img flex-shrink-0" alt="">
+                    <!-- <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
                     <div>
-                      <h3>John Larson</h3>
-                      <h4>Entrepreneur</h4>
+                      <h3>Angosom K</h3>
                       <div class="stars">
                         <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                       </div>
@@ -301,7 +299,54 @@
                   </div>
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                    Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore.
+                    Jag fick jobb efter 3 månader.
+                    Det gick jag på 2 intervju.
+                    Jag har heltid (tids anställning)
+
+                    Tack för hjälpen Hanna!
+                    <i class="bi bi-quote quote-icon-right"></i>
+                  </p>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-wrap">
+                <div class="testimonial-item">
+                  <div class="d-flex align-items-center">
+                    <!-- <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
+                    <div>
+                      <h3>Noorulnesa H</h3>
+                      <div class="stars">
+                        <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <p>
+                    <i class="bi bi-quote quote-icon-left"></i>
+                    Jag skulle vilja uppskatta hello Lillys insats och stöd. Jag fick mitt favoritjobb som jag var borta från under en längre tid, jag trodde faktiskt att jag aldrig mer kan arbeta inom det fält som jag har tillbringat med det. Men som tur var valde jag hello Lilly och fick möjlighet att få uppfylla mina drömmar igen. Jag skulle vilja rekommendera hello Lilly för mina vänner och alla de människor som har drömmar om att arbeta och bygga sitt liv. Jag skulle vilja tacka från djupet av hjärtat från Gabriel och Sofia som hjälpte mig mycket..
+                    <i class="bi bi-quote quote-icon-right"></i>
+                  </p>
+                </div>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-wrap">
+                <div class="testimonial-item">
+                  <div class="d-flex align-items-center">
+                    <!-- <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
+                    <div>
+                      <h3>Abbas R</h3>
+                      <div class="stars">
+                        <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <p>
+                    <i class="bi bi-quote quote-icon-left"></i>
+                    Jag hade en bra upplevelse i HelloLilly. Vi hade bra möten. De hjälpte mig att förbereda mitt CV.
+                    Och de vägledde mig att nå mina mål.
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
