--- a/index.html
+++ b/index.html
@@ -373,18 +373,18 @@ Mvh Jaweed
           <div class="col-lg-6">
 
             <div class="stats-item d-flex align-items-center">
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong> consequuntur quae diredo para mesta</p>
+              <span data-purecounter-start="0" data-purecounter-end="761" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Nöjda deltagare</strong> Totalt antal</p>
             </div><!-- End Stats Item -->
 
             <div class="stats-item d-flex align-items-center">
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
+              <span data-purecounter-start="0" data-purecounter-end="544" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Jobb</strong> Antal deltagere som fått jobb</p>
             </div><!-- End Stats Item -->
 
             <div class="stats-item d-flex align-items-center">
-              <span data-purecounter-start="0" data-purecounter-end="453" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
+              <span data-purecounter-start="0" data-purecounter-end="217" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Studera</strong> Antal deltagare som börjat plugga</p>
             </div><!-- End Stats Item -->
 
           </div>
@@ -397,10 +397,10 @@ Mvh Jaweed
     <!-- ======= Call To Action Section ======= -->
     <section id="call-to-action" class="call-to-action">
       <div class="container text-center" data-aos="zoom-out">
-        <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
-        <h3>Call To Action</h3>
-        <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <a class="cta-btn" href="#">Call To Action</a>
+        <a href="https://www.youtube.com/watch?v=9weA1zxwW-M&t=1s&ab_channel=HelloLilly" class="glightbox play-btn"></a>
+        <h3>Så fungerar det</h3>
+        <p> HelloLilly brinner för förbättrad matchning mellan arbetssökande och arbetsgivare, och med vårt engagerade team och kontaktnät på över 2000 företag i Sverige är vi duktiga på detta! Men, hur blir man deltagare hos HelloLilly, och hur går det till för att man ska få jobb eller börja en utbildning? Kolla videon och gör en <span style="font-weight: bolder;">Intresseanmälan</span></p>
+        <a class="cta-btn" href="#">Intresseanmälan</a>
       </div>
     </section><!-- End Call To Action Section -->
 
