--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@ Mvh Jaweed
 
           <div class="col-lg-4">
             <div class="content px-xl-5">
-              <h3>Frequently Asked <strong>Questions</strong></h3>
+              <h3>Vanliga <strong>frågor</strong></h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                Har du en fråga? Vi finns här för att svara! Om du inte ser din fråga här, skicka ett mail via vår <span style="font-weight: bolder;"> Kontakt </span> sida
               </p>
             </div>
           </div>
@@ -484,12 +484,14 @@ Mvh Jaweed
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-1">
                     <span class="num">1.</span>
-                    Non consectetur a erat nam at lectus urna duis?
+                    Jag vill veta mer om Rusta och matcha
                   </button>
                 </h3>
                 <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                    Rusta och matcha är en tjänst som hjälper arbetssökande att att komma ut i arbete eller studier på kortast möjliga tid. Målet med tjänsten, som kan pågå i maximalt tolv månader, är att deltagaren ska få jobb eller börja studera så fort som möjligt. 🎉
+
+                    Det är Arbetsförmedlingen som bestämmer om du har rätt till tjänsten eller inte. För att ta reda på om just du har rätt till Rusta och matcha måste du höra av dig till Arbetsförmedlingen och fråga. 🌞
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -498,12 +500,16 @@ Mvh Jaweed
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2">
                     <span class="num">2.</span>
-                    Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?
+                    Jag vill prata med er i telefon
                   </button>
                 </h3>
                 <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                    Vad roligt att du vill prata med oss.
+
+                    Du kan ringa till vår kundtjänst - 0731 21 47 39
+
+                    Vi har öppet alla vardagar mellan 08.30 till 17.00 med lunchstängt mellan 12.00-13.00
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -512,12 +518,19 @@ Mvh Jaweed
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-3">
                     <span class="num">3.</span>
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi?
+                    Vad har ni för KA nummer?
                   </button>
                 </h3>
                 <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                    Vi har olika KA-nummer på olika orter. KA-nummer är det du anger till Arbetsförmedlingen för att välja oss som leverantör i Rusta och matcha. Nedan finner du numret för din ort.
+
+                    Stockholm Nord: 10072502
+                    Stockholm Mitt: 10072501
+                    Stockholm Syd: 10073551
+                    Göteborg: 10072534
+                    Malmö: 10072500
+                    Västerås: 10072499
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -526,12 +539,12 @@ Mvh Jaweed
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-4">
                     <span class="num">4.</span>
-                    Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?
+                    Kan ni hjälpa mig att hitta en utbildning?
                   </button>
                 </h3>
                 <div id="faq-content-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                    Absolut - vi hjälper våra deltagare att både hitta jobb eller studier. Vi har en anställd SYV som mer än gärna hjälper dig att hitta rätt utbildning om du går Rusta och matcha hos oss. 👍
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -540,12 +553,12 @@ Mvh Jaweed
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-5">
                     <span class="num">5.</span>
-                    Tempus quam pellentesque nec nam aliquam sem et tortor consequat?
+                    Kan ni hjälpa mig om jag inte har Rusta och matcha
                   </button>
                 </h3>
                 <div id="faq-content-5" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
+                    Det kan vi göra! HelloLilly jobbar även med andra typer av rekryteringsuppdrag där vi kan matcha dig till någon av våra kunders lediga tjänster. Här hittar du lediga tjänster. 🚀
                   </div>
                 </div>
               </div><!-- # Faq item-->
