nav links working

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         <ul>
           <li><a href="#hero">Hem</a></li>
           <li><a href="#about">Om Oss</a></li>
-          <li><a href="#services">Rusta och Matcha</a></li>
-          <li><a href="#portfolio">Arbetsgivare</a></li>
-          <li><a href="#team">Seminarier</a></li>
-          <li><a href="blog">Blogg</a></li>
+          <li><a href="#">Rusta och Matcha</a></li>
+          <li><a href="#">Arbetsgivare</a></li>
+          <li><a href="#">Seminarier</a></li>
+          <li><a href="#">Blogg</a></li>
           <li><a href="#">Våra kontor</a></li>
           <li><a href="#">Karriärsida</a></li>
           <li><a href="#contact">Kontakt</a></li>
