--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">hello@hellolilly.se</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+4673 121 47 39</span></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+46 731 214 739</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://www.tiktok.com/@hellolilly.se" class="twitter"><i class="bi bi-tiktok"></i></a>
@@ -148,7 +148,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Om <i>Lilly</i><span style="color: orange;">.</span></h2>
+          <h2>Om <i style="color:#0066b2;">Lilly</i><span style="color: orange;">.</span></h2>
         </div>
 
         <div class="row gy-4">
@@ -384,7 +384,7 @@ Mvh Jaweed
 
             <div class="stats-item d-flex align-items-center">
               <span data-purecounter-start="0" data-purecounter-end="217" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Studera</strong> Antal deltagare som börjat plugga</p>
+              <p><strong>Studier</strong> Antal deltagare som börjat plugga</p>
             </div><!-- End Stats Item -->
 
           </div>
@@ -589,7 +589,7 @@ Mvh Jaweed
               </div>
 
               <h2 class="title">
-                <a href="blog-details.html">Pris som Årets förnyare på Arbetsmarknadsdagen 2023</a>
+                <a href="#">Pris som Årets förnyare på Arbetsmarknadsdagen 2023</a>
               </h2>
 
               <div class="d-flex align-items-center">
@@ -614,7 +614,7 @@ Mvh Jaweed
               </div>
 
               <h2 class="title">
-                <a href="blog-details.html">Mars 2023 bästa månaden någonsin!</a>
+                <a href="#">Mars 2023 bästa månaden någonsin!</a>
               </h2>
 
               <div class="d-flex align-items-center">
@@ -639,7 +639,7 @@ Mvh Jaweed
               </div>
 
               <h2 class="title">
-                <a href="blog-details.html">Vikten av att skapa en stark LinkedIn-profil</a>
+                <a href="#">Vikten av att skapa en stark LinkedIn-profil</a>
               </h2>
 
               <div class="d-flex align-items-center">
