--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
             <img src="assets/img/about.jpg" class="img-fluid rounded-4 mb-4" alt="">
             <p>Vi brinner för förbättrad matchning mellan arbetsgivare och arbetssökande, och med hjälp av våra tjänster minskar vi arbetslösheten i Sverige och säkerställer rätt person på rätt plats</p>
             <p>Har du några frågor är du välkommen att kontakta vår kundtjänst genom att fylla i formuläret nedan, så kontaktar vi dig via telefon eller mail så snabbt vi kan!</p>
-            <p>Mvh,</p>
-            <p>HelloLilly</p>
-            <p>0731 21 47 39</p>
-            <p>info@hellolilly.se</p>
+            <p> Med vänliga hälsningar, </p>
+            <p> <strong> HelloLilly </strong></p>
+            <p> <strong> 0731 21 47 39 </strong></p>
+            <p> <strong> info@hellolilly.se </strong></p>
           </div>
           <div class="col-lg-6">
             <div class="content ps-0 ps-lg-5">
