--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <h3>Förbättrad matchning mellan arbetsgivare och arbetssökande!</h3>
             <img src="assets/img/about.jpg" class="img-fluid rounded-4 mb-4" alt="">
             <p>Vi brinner för förbättrad matchning mellan arbetsgivare och arbetssökande, och med hjälp av våra tjänster minskar vi arbetslösheten i Sverige och säkerställer rätt person på rätt plats</p>
-            <p>Har du några frågor är du välkommen att kontakta vår kundtjänst genom att fylla i formuläret nedan, så kontaktar vi dig via telefon eller mail så snabbt vi kan!</p>
+            <p>Har du några frågor är du välkommen att kontakta vår kundtjänst via telefon eller mail så svarar vi så snabbt vi kan!</p>
             <p> Med vänliga hälsningar, </p>
             <p> <strong> HelloLilly </strong></p>
             <p> <strong> 0731 21 47 39 </strong></p>
